--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
     </header>
     <div class="map-container">
         <ol>
-            <li><img src="https://drive.google.com/uc?id=1-BLonm_nlR4WtzpyKGH1SHq9NvHXEgYj" alt="Image 1"></li>
-            <li><img src="https://drive.google.com/uc?id=1-GgL7J6bU8cYZMNhmwkxYh8UdM2HYUFc" alt="Image 2"></li>
-            <li><img src="https://drive.google.com/uc?id=1-IQ8F2kbmNJnMzznCDjYpjZdRAax_vaw" alt="Image 3"></li>
-            <li><img src="https://drive.google.com/uc?id=1-JYpMSkbZMXErNrtCVJH0Gwu5EkMYYUC" alt="Image 4"></li>
-            <li><img src="https://drive.google.com/uc?id=1-PnPZ9TO2PN5s1PTEfH3uQhg88hB1e5y" alt="Image 5"></li>
-            <li><img src="https://drive.google.com/uc?id=1-UfvPqYGFWox2tDB73B5aOeuWj1DN69D" alt="Image 6"></li>
-            <li><img src="https://drive.google.com/uc?id=1-VVa0-W54ejS0eKQzdCkpAkM6_B_gVoI" alt="Image 7"></li>
-            <li><img src="https://drive.google.com/uc?id=1-XRPxThl6hKb0OKWrYH6XPcukT8z9_8L" alt="Image 8"></li>
-            <li><img src="https://drive.google.com/uc?id=1-a5rkYkdF27ewbhiS0zABsMhK5P3YDJ-" alt="Image 9"></li>
-            <li><img src="https://drive.google.com/uc?id=1-mdhUXbV6MpDzzY6dD0v-T-Xd1XejVir" alt="Image 10"></li>
-            <li><img src="https://drive.google.com/uc?id=1-r4Xfqq6rc-GleJPAqdQjsRO8D1vYicR" alt="Image 11"></li>
-            <li><img src="https://drive.google.com/uc?id=1-vPxFPg7Q_Wz_5rfekPI2a78nWtyILGk" alt="Image 12"></li>
-            <li><img src="https://drive.google.com/uc?id=1-xKwpZbkmVWpEgY1Y2kPc6-_WJa7Wuzn" alt="Image 13"></li>
-            <li><img src="https://drive.google.com/uc?id=1-zqGBqmYFpVXrxV4VeEW4TFbhLLldC8P" alt="Image 14"></li>
-            <li><img src="https://drive.google.com/uc?id=100gn0o0A2uWVKboTyrX37AF_L05OZZQm" alt="Image 15"></li>
-            <li><img src="https://drive.google.com/uc?id=106ufhal_PASVph7yylw6WJu1FIzUHkm_" alt="Image 16"></li>
-            <li><img src="https://drive.google.com/uc?id=10E_wbvaTtqbCfdRW2DSEu_Vf33nFQAso" alt="Image 17"></li>
-            <li><img src="https://drive.google.com/uc?id=10GWpuJqwpbC1knqEQAy97dkgmLnb7jFw" alt="Image 18"></li>
-            <li><img src="https://drive.google.com/uc?id=10GlGdLPJl9jWJWTIsv5mapSckyGLtLOa" alt="Image 19"></li>
-            <li><img src="https://drive.google.com/uc?id=10Sg4WFC-Jkqo_dtHEaPu3A4uaqRtAzcx" alt="Image 20"></li>
-            <li><img src="https://drive.google.com/uc?id=10VoTKrERh9r_mxgtPBYAAUQHpaHLwp0y" alt="Image 21"></li>
-            <li><img src="https://drive.google.com/uc?id=10cEKyB8wVO2B1vJok19w6KR4KdxA6xEe" alt="Image 22"></li>
+            <li><img src="https://drive.google.com/download?id=1-BLonm_nlR4WtzpyKGH1SHq9NvHXEgYj" alt="Image 1"></li>
+            <li><img src="https://drive.google.com/download?id=1-GgL7J6bU8cYZMNhmwkxYh8UdM2HYUFc" alt="Image 2"></li>
+            <li><img src="https://drive.google.com/download?id=1-IQ8F2kbmNJnMzznCDjYpjZdRAax_vaw" alt="Image 3"></li>
+            <li><img src="https://drive.google.com/download?id=1-JYpMSkbZMXErNrtCVJH0Gwu5EkMYYUC" alt="Image 4"></li>
+            <li><img src="https://drive.google.com/download?id=1-PnPZ9TO2PN5s1PTEfH3uQhg88hB1e5y" alt="Image 5"></li>
+            <li><img src="https://drive.google.com/download?id=1-UfvPqYGFWox2tDB73B5aOeuWj1DN69D" alt="Image 6"></li>
+            <li><img src="https://drive.google.com/download?id=1-VVa0-W54ejS0eKQzdCkpAkM6_B_gVoI" alt="Image 7"></li>
+            <li><img src="https://drive.google.com/download?id=1-XRPxThl6hKb0OKWrYH6XPcukT8z9_8L" alt="Image 8"></li>
+            <li><img src="https://drive.google.com/download?id=1-a5rkYkdF27ewbhiS0zABsMhK5P3YDJ-" alt="Image 9"></li>
+            <li><img src="https://drive.google.com/download?id=1-mdhUXbV6MpDzzY6dD0v-T-Xd1XejVir" alt="Image 10"></li>
+            <li><img src="https://drive.google.com/download?id=1-r4Xfqq6rc-GleJPAqdQjsRO8D1vYicR" alt="Image 11"></li>
+            <li><img src="https://drive.google.com/download?id=1-vPxFPg7Q_Wz_5rfekPI2a78nWtyILGk" alt="Image 12"></li>
+            <li><img src="https://drive.google.com/download?id=1-xKwpZbkmVWpEgY1Y2kPc6-_WJa7Wuzn" alt="Image 13"></li>
+            <li><img src="https://drive.google.com/download?id=1-zqGBqmYFpVXrxV4VeEW4TFbhLLldC8P" alt="Image 14"></li>
+            <li><img src="https://drive.google.com/download?id=100gn0o0A2uWVKboTyrX37AF_L05OZZQm" alt="Image 15"></li>
+            <li><img src="https://drive.google.com/download?id=106ufhal_PASVph7yylw6WJu1FIzUHkm_" alt="Image 16"></li>
+            <li><img src="https://drive.google.com/download?id=10E_wbvaTtqbCfdRW2DSEu_Vf33nFQAso" alt="Image 17"></li>
+            <li><img src="https://drive.google.com/download?id=10GWpuJqwpbC1knqEQAy97dkgmLnb7jFw" alt="Image 18"></li>
+            <li><img src="https://drive.google.com/download?id=10GlGdLPJl9jWJWTIsv5mapSckyGLtLOa" alt="Image 19"></li>
+            <li><img src="https://drive.google.com/download?id=10Sg4WFC-Jkqo_dtHEaPu3A4uaqRtAzcx" alt="Image 20"></li>
+            <li><img src="https://drive.google.com/download?id=10VoTKrERh9r_mxgtPBYAAUQHpaHLwp0y" alt="Image 21"></li>
+            <li><img src="https://drive.google.com/download?id=10cEKyB8wVO2B1vJok19w6KR4KdxA6xEe" alt="Image 22"></li>
         </ol>
     </div>
     <footer>
